--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
     "wild_randomizer": {
-        "is_enabled": "no",
-        "exclude_legendaries": "yes"
+        "is_enabled": "yes",
+        "exclude_legendaries": "no"
     },
     "trainer_randomizer": {
-        "is_enabled": "no",
-        "force_6_pokemons_on_important_trainers": "no",
+        "is_enabled": "yes",
+        "force_6_pokemons_on_important_trainers": "yes",
         "force_perfect_ivs": "no",
-        "make_ai_smart_for_all_trainers": "no",
+        "make_ai_smart_for_all_trainers": "yes",
         "allow_all_trainers_to_terastalize": "no",
-        "randomize_fixed_tera_type": "no",
-        "randomize_all_tera_type": "no"
+        "randomize_fixed_tera_type": "yes",
+        "randomize_all_tera_type": "yes"
     },
     "personal_data_randomizer": {
-        "is_enabled": "no",
+        "is_enabled": "yes",
         "randomize_abilities": "yes",
         "ban_wonder_guard": "yes",
         "randomize_movesets": "no",
@@ -21,16 +21,16 @@
     },
     "starter_randomizer": {
         "is_enabled": "yes",
-        "randomize_all_gifts": "no",
-        "randomize_tera_type": "no",
+        "randomize_all_gifts": "yes",
+        "randomize_tera_type": "yes",
         "show_starters_in_overworld": "yes"
     },
     "static_randomizer": {
-        "is_enabled": "no",
-        "randomize_tera_type_for_static_tera": "no"
+        "is_enabled": "yes",
+        "randomize_tera_type_for_static_tera": "yes"
     },
     "tm_randomizer": {
-        "is_enabled": "no"
+        "is_enabled": "yes"
     },
     "patch_trpfd": "yes"
 }
